# OpenTray

./: .env.example  .gitignore  CHANGELOG.md  README.md  SIGNING.md  config.json  flake.nix  index.html  package-lock.json  package.json  release-please-config.json  setup-keys.sh
.changeset/: README.md
.claude/: settings.local.json
.github/workflows/: build.yml  release-please.yml  release.yml
nix/: opentray.nix
scripts/: build-macos.sh  build-signed.ts  check-certs.ts  export-cert.ts  verify-apple-dev.ts
src/: App.css  App.tsx  main.tsx  styles.css  styles.scss
src-tauri/: Cargo.toml  entitlements.plist  icon.icns  tauri.conf.json  tauri.prod.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/src/: command.rs  fns.rs  main.rs  tray.rs
src/components/: AnimatedStatus.tsx  ArchivedSessions.tsx  ChatView.tsx  DiffView.tsx  DiffViewer.tsx  Header.tsx  InstanceList.tsx  PermissionModal.tsx  PermissionPopup.tsx  SessionList.tsx  SettingsView.tsx  StatusBar.tsx  TodoList.tsx  UpdateBanner.css  UpdateBanner.tsx  index.ts
src/hooks/: index.ts  useOpenCode.ts  useSettings.ts  useTheme.ts  useUpdater.ts
src/lib/: api.ts  types.ts  utils.ts
