[package]
name = "opentray"
version = "0.2.2"
description = "OpenTray - Menubar companion for OpenCode"
authors = ["OpenTray"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "macos-private-api",
  "tray-icon",
  "image-png",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
imageproc = "0.25"

tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"

# macOS-only dependencies (nspanel for Spotlight-style sliding panel)
[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }

[features]
custom-protocol = ["tauri/custom-protocol"]
